[Autofill] Update placeholder visibility on suggested value change.

Bug: 780403
Change-Id: I0af3cbbddced641844b29e059193fa666ce36729
Reviewed-on: https://chromium-review.googlesource.com/750061
Commit-Queue: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Reviewed-by: Keishi Hattori <keishi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516044}
Former-commit-id: 8ee053cd8e297c3dc93b20200e3094a844716469